# RoyaDestroyer-AI

./: .env.example  .gitignore  Makefile  README.md  V1_READY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: api-contract.md  ci-cd.md  dataset-registry.md  model-card-template.md  module-spec.md
scripts/: dedup.py  download_datasets.py  download_instructions.md  evaluate.py  export_model.py  report_distribution.py  smoke_predict.py  split.py  train.py  unify_datasets.py  verify_environment.py  verify_images.py
service/: Dockerfile  requirements-service.txt
service/app/: main.py  predictor.py  schemas.py
src/royadestroyer_ai/: __init__.py  augmentations.py  config.py  datasets.py  inference.py  labels.py  metrics.py  model_factory.py  postprocess.py  preprocessing.py
tests/: test_predictor.py
