[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "royadestroyer-ai"
version = "0.1.0"
description = "AI module for RoyaDestroyer coffee disease diagnosis"
requires-python = ">=3.10,<3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
